--- a/.github/workflows/push-workflow-ec2.yaml
+++ b/.github/workflows/push-workflow-ec2.yaml
@@ -1,86 +1,87 @@
-name: Deploy to EC2
+name: build-deploy-development
 
 env:
+  IMAGE_NAME: appflowy-cloud
+  CONTAINER_NAME: appflowy-cloud
   REMOTE_DIR: /home/ubuntu/appflowy
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ main ]
+    branches: main
     paths-ignore:
       - '*.md'
       - '.gitignore'
       - 'docs/'
       - 'README.md'
-  workflow_dispatch:
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+  build-and-deploy:
+    runs-on: ubuntu-22.04
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up environment
-        run: |
-          echo "${{ secrets.EC2_ENV }}" > .env
-
       - name: Setup SSH
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+          echo "${{ secrets.EC2_KEY }}" >> id_rsa
+          chmod 400 id_rsa
 
-      - name: Prepare directories
+      - name: Copy files to server
         run: |
-          ssh -i ~/.ssh/id_rsa ubuntu@${{ secrets.EC2_HOST }} << 'ENDSSH'
-          # Ensure directories exist
+          # Create directory and set permissions
+          ssh -i id_rsa -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} << 'ENDSSH'
+          sudo rm -rf ${{ env.REMOTE_DIR }}
           sudo mkdir -p ${{ env.REMOTE_DIR }}
           sudo chown -R ubuntu:ubuntu ${{ env.REMOTE_DIR }}
           ENDSSH
 
-      - name: Copy files to server
-        run: |
-          scp -i ~/.ssh/id_rsa docker-compose.yml ubuntu@${{ secrets.EC2_HOST }}:${{ env.REMOTE_DIR }}/
-          scp -i ~/.ssh/id_rsa .env ubuntu@${{ secrets.EC2_HOST }}:${{ env.REMOTE_DIR }}/
+          # Copy project files
+          scp -i id_rsa -o StrictHostKeyChecking=no -r ./* ubuntu@${{ secrets.EC2_HOST }}:${{ env.REMOTE_DIR }}/
+          
+          # Copy env file
+          echo -e "${{ secrets.EC2_ENV }}" > .env
+          scp -i id_rsa -o StrictHostKeyChecking=no .env ubuntu@${{ secrets.EC2_HOST }}:${{ env.REMOTE_DIR }}/
 
-      - name: Deploy
+      - name: Deploy with rollback
         run: |
-          ssh -i ~/.ssh/id_rsa ubuntu@${{ secrets.EC2_HOST }} << 'ENDSSH'
+          ssh -i id_rsa -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} << 'ENDSSH'
           set -e
           cd ${{ env.REMOTE_DIR }}
-
+          
           # Setup docker permissions
           sudo groupadd -f docker
           sudo usermod -aG docker ubuntu
           sudo chmod 666 /var/run/docker.sock
-
-          # Pull images first to avoid downtime
-          echo "Pulling new images..."
-          docker-compose pull || { echo "Failed to pull images"; exit 1; }
-
-          # Stop existing containers
-          docker-compose down --remove-orphans
-
-          # Start new containers
-          echo "Starting new containers..."
-          docker-compose up -d
-
+          
+          # Create required directories with proper permissions
+          sudo mkdir -p nginx/ssl
+          sudo chown -R ubuntu:ubuntu .
+          
+          # Clean up existing containers and volumes
+          sudo docker-compose down --remove-orphans || true
+          sudo docker system prune -af || true
+          
+          # Build and deploy with docker-compose
+          sudo docker-compose build --no-cache
+          sudo docker-compose up -d
+          
           # Wait for containers to start
-          echo "Waiting for containers to start..."
-          sleep 15
-
+          sleep 10
+          
           # Verify deployment
-          if ! docker-compose ps | grep -q "Up"; then
-            echo "Container verification failed!"
+          if ! sudo docker-compose ps | grep -q "Up"; then
+            echo "Deployment failed, containers are not running"
+            sudo docker-compose logs
             exit 1
           fi
-
+          
           echo "Deployment successful!"
           ENDSSH
 
       - name: Cleanup
         if: always()
         run: |
-          rm -f ~/.ssh/id_rsa
+          rm -f id_rsa
           rm -f .env
