--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,18 +29,83 @@ http {
     map $http_origin $cors_origin {
         # AppFlowy Web origin
         "~^http://localhost:(3000|8080)$" $http_origin;
+        "~^https://appflowy\.jurassiq-dev\.org$" $http_origin;
         default "null";
+    }
+
+    upstream appflowy_cloud {
+        server appflowy_cloud:8000;
+    }
+
+    upstream gotrue {
+        server gotrue:9999;
+    }
+
+    upstream admin_frontend {
+        server admin_frontend:3000;
+    }
+
+    upstream appflowy_web {
+        server appflowy_web:80;
     }
 
     server {
         listen 8080;
+        client_max_body_size 10M;
 
-        # https://github.com/nginxinc/nginx-prometheus-exporter
+        # Admin Frontend
+        location /console {
+            proxy_pass http://admin_frontend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # GoTrue
+        location /gotrue {
+            proxy_pass http://gotrue;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # AppFlowy Cloud
+        location /api {
+            proxy_pass http://appflowy_cloud;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # AppFlowy Web
+        location / {
+            proxy_pass http://appflowy_web;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Metrics endpoint
         location = /stub_status {
             stub_status;
         }
     }
-
 
     server {
         ssl_certificate /etc/nginx/ssl/certificate.crt;
@@ -48,6 +113,7 @@ http {
 
         listen 80;
         listen 443 ssl;
+        server_name appflowy.jurassiq-dev.org;
         client_max_body_size 10M;
 
         underscores_in_headers on;
@@ -61,6 +127,11 @@ http {
         set $minio_internal_host "minio:9000";
         set $portainer_backend "http://portainer:9000";
         set $pgadmin_backend "http://pgadmin:80";
+
+        # Redirect HTTP to HTTPS
+        if ($scheme != "https") {
+            return 301 https://$host$request_uri;
+        }
 
         # GoTrue Authentication
         location /gotrue/ {
@@ -309,5 +380,4 @@ http {
             proxy_set_header Host $host;
         }
     }
-
 }
