--- a/.github/workflows/push-workflow-ec2.yaml
+++ b/.github/workflows/push-workflow-ec2.yaml
@@ -18,7 +18,7 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-22.04
-    timeout-minutes: 15
+    timeout-minutes: 30
 
     steps:
       - name: Checkout code
@@ -28,7 +28,11 @@ jobs:
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
-
+        with:
+          buildkitd-flags: --debug
+          config-inline: |
+            [worker.oci]
+              max-parallelism = 2
 
       - name: Set up environment
         run: |
@@ -41,8 +45,20 @@ jobs:
 
       - name: Build Docker images
         run: |
-          # Build all images defined in docker-compose.yml
-          docker compose build --no-cache
+          # Free up space
+          df -h
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          df -h
+
+          # Build images with increased memory limit and debug output
+          DOCKER_BUILDKIT=1 PROGRESS_NO_TRUNC=1 docker compose build \
+            --no-cache \
+            --build-arg DOCKER_MEMORY=6g \
+            --build-arg CARGO_NET_GIT_FETCH_WITH_CLI=true \
+            --build-arg CARGO_BUILD_JOBS=2
+          
           docker images
 
       - name: Save Docker images
