--- a/.github/workflows/push-workflow-ec2.yaml
+++ b/.github/workflows/push-workflow-ec2.yaml
@@ -90,8 +90,24 @@ jobs:
           sudo chown -R ubuntu:ubuntu ${{ env.REMOTE_DIR }}
           ENDSSH
           
+          # Copy project files excluding unnecessary ones
+          # Create a temporary exclude file
+          echo ".git" > exclude.txt
+          echo ".github" >> exclude.txt
+          echo ".env" >> exclude.txt
+          echo ".docker.env" >> exclude.txt
+          echo "docker-images" >> exclude.txt
+          
+          # Use scp with the exclude file
+          scp -r -o StrictHostKeyChecking=no $(cat exclude.txt | while read line; do echo "-E $line"; done) \
+            ./* ubuntu@${{ secrets.EC2_HOST }}:${{ env.REMOTE_DIR }}/
+          
+          # Clean up
+          rm exclude.txt
+          
           # Copy Docker images and config files
-          scp -i id_rsa -o StrictHostKeyChecking=no -r docker-images/* ubuntu@${{ secrets.EC2_HOST }}:${{ env.REMOTE_DIR }}/
+          ssh -i id_rsa -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "mkdir -p ${{ env.REMOTE_DIR }}/docker-images"
+          scp -i id_rsa -o StrictHostKeyChecking=no -r docker-images/* ubuntu@${{ secrets.EC2_HOST }}:${{ env.REMOTE_DIR }}/docker-images/
           scp -i id_rsa -o StrictHostKeyChecking=no docker-compose.yml ubuntu@${{ secrets.EC2_HOST }}:${{ env.REMOTE_DIR }}/
           scp -i id_rsa -o StrictHostKeyChecking=no .env ubuntu@${{ secrets.EC2_HOST }}:${{ env.REMOTE_DIR }}/
 
@@ -121,10 +137,12 @@ jobs:
 
           # Load new images
           echo "Loading Docker images..."
+          cd docker-images
           for image in *.tar.gz; do
             echo "Loading $image..."
             sudo gunzip -c $image | sudo docker load
           done
+          cd ..
 
           # Deploy with docker-compose
           sudo docker compose up -d
