--- a/.github/workflows/push-workflow-ec2.yaml
+++ b/.github/workflows/push-workflow-ec2.yaml
@@ -91,20 +91,19 @@ jobs:
           ENDSSH
           
           # Copy project files excluding unnecessary ones
-          # Create a temporary exclude file
-          echo ".git" > exclude.txt
-          echo ".github" >> exclude.txt
-          echo ".env" >> exclude.txt
-          echo ".docker.env" >> exclude.txt
-          echo "docker-images" >> exclude.txt
-          
-          # Use scp with the exclude file
-          scp -r -o StrictHostKeyChecking=no $(cat exclude.txt | while read line; do echo "-E $line"; done) \
-            ./* ubuntu@${{ secrets.EC2_HOST }}:${{ env.REMOTE_DIR }}/
-          
-          # Clean up
-          rm exclude.txt
-          
+          # Create tar archive excluding unwanted files
+          tar --exclude='.git' \
+              --exclude='.github' \
+              --exclude='.env' \
+              --exclude='.docker.env' \
+              --exclude='docker-images' \
+              --exclude='id_rsa' \
+              -czf deploy.tar.gz .
+
+          # Copy the archive and extract it on the remote server
+          scp -i id_rsa -o StrictHostKeyChecking=no deploy.tar.gz ubuntu@${{ secrets.EC2_HOST }}:${{ env.REMOTE_DIR }}/
+          ssh -i id_rsa -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "cd ${{ env.REMOTE_DIR }} && tar xzf deploy.tar.gz && rm deploy.tar.gz"
+
           # Copy Docker images and config files
           ssh -i id_rsa -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "mkdir -p ${{ env.REMOTE_DIR }}/docker-images"
           scp -i id_rsa -o StrictHostKeyChecking=no -r docker-images/* ubuntu@${{ secrets.EC2_HOST }}:${{ env.REMOTE_DIR }}/docker-images/
